Fix navbar collapse

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -8,6 +8,14 @@
  
  }
 
+.navbar-collapse.collapsing{
+  width:100%;
+}
+
+.navbar-collapse.in{
+  width:100%;
+}
+
 //*############################ SPECIAL NAVBAR CSS #############################*//
 
 .navbar-nav>li>.dropdown-menu {
